The user, event, and guest models were created and the first views were made (sign_in, home, sign_up)

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,3 +3,7 @@
 @import 'abstract/classes';
 @import 'base/base';
 @import 'views/_home_index';
+@import 'components/_navbar_devise';
+@import 'views/devise/sign_in';
+@import 'views/devise/sign_up';
+@import 'components/navbar';
