--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -15,4 +15,6 @@
     position: relative;
     height: 100%;
     width: 100%;
+    font-family: "/fonts/berlinsans.otf";
+    font-family: "/fonts/Renogare-Regular.otf";
 }
