--- a/app/assets/stylesheets/views/_home_index.scss
+++ b/app/assets/stylesheets/views/_home_index.scss
@@ -13,10 +13,10 @@
         .title{
             color: $main-pink;
             display: flex;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-family: "berlinsans";
             font-size: 50px;
             justify-content: center;
-            letter-spacing: 1px;
+            letter-spacing: 3px;
             width: 60%;
         }
         .slogan{
@@ -26,23 +26,21 @@
         margin: 0px 0px 50px 0px;
         text-align: center;
         width: 80%;
+        font-family: "Renogagre-Regular";
         }
 
-        .btn{
+        .btn {
             height: 7%;
             width: 50%;
+
+            form {
+                height: 100%;
+                width: 100%;
+            }
+        
         }
         
-        button{
-            background-color: $main-pink;
-            border-radius: 10px;
-            border: none;
-            color: $principal-night;
-            font-size: 20px;
-            font-weight: 400;
-            height: 100%;
-            width: 100%;
-        }
+
     }
     
     .right{
