--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,15 @@
   </head>
 
   <body>
-    <% unless controller_name == 'sessions' || controller_name == 'home' || controller_name=='registrations'  %>
+    <% unless controller_name == 'sessions' || controller_name == 'home' || controller_name== 'registrations'  %>
       <%= render 'partials/navbar' %>
     <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
