--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -44,11 +44,11 @@
           <%= form.time_field :end_time %>
         </div>
       </div>
+
     
     </div>
-  
   </div>
   <div class="create-event">
-      <%= form.submit %>
+      <%= form.submit "Crear Evento" %>
   </div>
 <% end %>
