--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,5 +7,7 @@
 @import 'views/devise/sign_in';
 @import 'views/devise/sign_up';
 @import 'components/navbar';
+@import 'views/_events_homepage';
 @import 'views/_events_index';
 @import 'views/_events_new';
+@import 'views/_events_show';
