--- a/app/assets/stylesheets/views/_events_index.scss
+++ b/app/assets/stylesheets/views/_events_index.scss
@@ -1,39 +1,50 @@
-.container-events {
-    align-items: stretch;
-    background-color: $main-white;
-    display: flex;
+.container-index {
     height: 100%;
     width: 100%;
+    @include center-flex-column;
 
-    .left {
-        height: 75%;
-        width: 47%;
-        @include center-flex-column;
+    #events {
+        height: 85%;
+        width: 90%;
+        font-family: 'Renogare-Regular';
 
-        .title-event {
-            font-family: "berlinsans";
+        h1 {
             color: $main-pink;
+            font-family: 'berlinsans';
+            letter-spacing: 2px;
+            margin-bottom: 4%;
         }
 
-        p {
-            text-align: justify;
-            padding: 5% 10% 10% 10%;
-        }
+        .container-events-all {
+           display: flex;
+           flex-direction: column;
+           height: 80%; 
+           max-height: 80%;
+           overflow-y: auto;
 
-        .button{
-            height: 7%;
-            width: 40%;
-            @include center-flex-column
-        }
-    }
+           a {
+               margin-bottom: 5%;
+               text-decoration: none;
+           }
+            .event-card {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                background-color: $white-secondary;
+                border-radius: 10px;
+                box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
+                margin-bottom: 5%;
+                padding: 1%;
+                color: $night;
 
-    .right {
-        width: 53%;
-        height: 100%;
+                .place-guest{
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
 
-        .img-home {
-            width: 100%;
-            height: 100%;
+            
         }
     }
 }
