--- a/app/views/partials/_navbar.erb
+++ b/app/views/partials/_navbar.erb
@@ -2,7 +2,7 @@
     <div class="container-nav-devise">
         <p>Tu-Fiesta</p>
         <div class="menu-devise">
-            <%= link_to "Tus eventos", class: "links"%>
+           <%= link_to "Tus eventos", events_path, class: "links" %>
             <%= link_to "Perfil", class: "links"%>
             <%= button_to "Cerrar sesión", destroy_user_session_path, method: :delete %>
         </div>
