Add the edit events

--- a/app/assets/stylesheets/views/_events_new.scss
+++ b/app/assets/stylesheets/views/_events_new.scss
@@ -31,6 +31,11 @@
                 flex-direction: column;
                 justify-content: space-evenly;
 
+
+                .form-main {
+                    display: block;
+                }
+                
                 input {
                     width: 80%;
                 }
@@ -41,6 +46,11 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
+
+
+                .form-main {
+                    display: block;
+                }
 
                 input {
                     width: 80%;
