--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Guests</h1>
+<h1>TUS INVITADOS</h1>
 
 <div id="guests">
   <% @guests.each do |guest| %>
