--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -1,9 +1,21 @@
-<h1>New guest</h1>
+<div class="container-new-guests">
+  <div class="left-guests">
+   <%= image_tag ("Image-guests.png"), class:"img-guests"%>
+  </div>
+  <div class="right-guests">
+    <div class="guests-form">
+      <h1>REGISTRAR INVITADOS</h1>
+      <div class="main-form-guests">
+        <%= render "form", guest: @guest %>
+      </div>
+      <br>
 
-<%= render "form", guest: @guest %>
+    </div>
 
-<br>
+    <div>
+      <%= link_to "Back to guests", guests_path %>
+    </div>
 
-<div>
-  <%= link_to "Back to guests", guests_path %>
+  </div>
+  
 </div>
