All views of the guest model were made, as well as its logic and navigability

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,3 +13,6 @@
 @import 'views/_events_show';
 @import 'views/_events_edit';
 @import 'views/_guests_new';
+@import 'views/_guests_index';
+@import 'views/_guests_show';
+@import 'views/_guests_edit';
