--- a/app/views/guests/_guest.html.erb
+++ b/app/views/guests/_guest.html.erb
@@ -1,26 +1,26 @@
-<div id="<%= dom_id guest %>">
+<div id="<%= dom_id guest  %>" class="guest-info">
   <p>
-    <strong>Name:</strong>
+    <strong>Nombre:</strong>
     <%= guest.name %>
   </p>
 
   <p>
-    <strong>Email:</strong>
+    <strong>Correo:</strong>
     <%= guest.email %>
   </p>
 
   <p>
-    <strong>Telephone:</strong>
+    <strong>Teléfono:</strong>
     <%= guest.telephone %>
   </p>
 
   <p>
-    <strong>Kinship:</strong>
+    <strong>Parentezco:</strong>
     <%= guest.kinship %>
   </p>
 
   <p>
-    <strong>Table:</strong>
+    <strong>Mesa:</strong>
     <%= guest.table %>
   </p>
 
