--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing guest</h1>
-
-<%= render "form", guest: @guest %>
+<div class="container-show-guest">
+  <div class="title-guest">
+    <h1>Detalle de INVITADO</h1>
+  </div>
+  <div class="card-show-guest">
+    <div class="content-form-edit">
+      <h2>Editar invitado en <%= @event.name %></h2>
+      <%= render "form", guest: @guest%>
+    </div>
+    <div class="show-guest-edit">
+      <%= link_to "Mostrar Invitado", @guest %> 
+      <%= link_to "Regresar a Invitados", guests_path %>
+    </div>
+  </div>
+</div>
 
 <br>
 
-<div>
-  <%= link_to "Show this guest", @guest %> |
-  <%= link_to "Back to guests", guests_path %>
-</div>
