Added search bar and made aesthetic details

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -32,6 +32,10 @@ nav {
                 font-family: "berlinsans";
                 text-decoration: underline;
             }
+
+            .links.active {
+                color: $main-white;
+            }
         }
     }
 }
