--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,3 +16,4 @@
 @import 'views/_guests_index';
 @import 'views/_guests_show';
 @import 'views/_guests_edit';
+@import 'components/_bar_search_event';
