--- a/app/assets/stylesheets/views/_events_new.scss
+++ b/app/assets/stylesheets/views/_events_new.scss
@@ -69,6 +69,14 @@
                         width: 50%;
                     }
                 }
+
+                #event_end_time {
+                    width: 100%;
+                }
+
+                #event_start_time {
+                    width: 95%;
+                }
             }
         }
 
