--- a/app/assets/stylesheets/views/_events_show.scss
+++ b/app/assets/stylesheets/views/_events_show.scss
@@ -40,5 +40,10 @@
     .show-edit {
         display: flex;
         align-items: flex-end;
+
+        .button-delete {
+            border: none;
+            background: none;
+        }
     }
 }
