--- a/app/assets/stylesheets/views/_guests_show.scss
+++ b/app/assets/stylesheets/views/_guests_show.scss
@@ -33,5 +33,10 @@
     .show-guest {
         display: flex;
         align-items: flex-end;
+
+        .button-delete {
+            border: none;
+            background: none;
+        }
     }
 }
