--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="show-guest-edit">
       <%= link_to "Mostrar Invitado", @guest %> 
-      <%= link_to "Regresar a Invitados", guests_path %>
+      <%= link_to "Regresar a Invitados", event_guests_path(@event) %>
     </div>
   </div>
 </div>
