--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -3,6 +3,7 @@
 <div class="container-list">
   <div class="container-list-group">
     <h1>MIS INVITADOS</h1>
+   <%= render 'partials/bar_search_guest' %>
     <div class="guest-list">
       <table class="table-guests">
         <thead>
