Final adjustments on all models

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -10,8 +10,8 @@
     <br>
 
     <div class="show-edit">
-      <%= link_to "Show this event", @event %> |
-      <%= link_to "Back to events", events_path %>
+      <%= link_to "Ver evento", @event %> |
+      <%= link_to "Regresar a Eventos", events_path %>
     </div>
   </div> 
 </div>
