--- a/app/views/events/homepage.html.erb
+++ b/app/views/events/homepage.html.erb
@@ -3,7 +3,8 @@
 <div class="container-events">
   <div class="left">
     <h1 class="title-event">Bienvenidos</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque blanditiis rem dolorem eaque tempore quam commodi deserunt ipsam voluptatibus autem quisquam amet assumenda sapiente, mollitia culpa accusantium modi molestias eius.</p>
+    <p>¡Bienvenido a Tu-Fiesta! <br>
+    Aquí te ofrecemos una plataforma fácil y eficiente para gestionar tus eventos y mantener tus invitaciones bajo control. Ya sea que estés planeando una reunión íntima o un gran evento, estamos aquí para hacer que la gestión de invitados sea un proceso sencillo y sin complicaciones.</p>
     <%= link_to "Crear Evento", new_event_path, class:"button button-event" %>
   </div>
   <div class="right">
