--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -6,7 +6,7 @@
     <br>
 
     <div class="back-events">
-      <%= link_to "Back to events", events_path %>
+      <%= link_to "Volver a Eventos", events_path %>
     </div>
   </div>
 
