--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -28,8 +28,8 @@
       </table>
     </div>  
   </div>
-
+  <%= link_to "Nuevo invitado", new_guest_path %><%= link_to "Enviar Invitación", not_available_path %>
 </div>
 
 
-<%= link_to "Nuevo invitado", new_guest_path %>
+
