--- a/app/views/partials/_navbar.erb
+++ b/app/views/partials/_navbar.erb
@@ -3,7 +3,9 @@
         <p>Tu-Fiesta</p>
         <div class="menu-devise">
             <%= link_to "Tus eventos", events_path, class: current_page?(events_path) ? "links active" : "links" %>
-            <%= link_to "Perfil", class: "links"%>
+            <%= form_tag new_user_session_path, method: :get do %>
+                <%= button_tag 'Home', type:"submit"%>
+            <% end %> 
             <%= button_to "Cerrar sesión", destroy_user_session_path, method: :delete %>
         </div>
         
