--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: event) do |form| %>
   <% if event.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+      <h2><%= pluralize(event.errors.count, "error") %> impidió que se guardara este evento:</h2>
 
       <ul>
         <% event.errors.each do |error| %>
