--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: guest) do |form| %>
   <% if guest.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(guest.errors.count, "error") %> prohibited this guest from being saved:</h2>
+      <h2><%= pluralize(guest.errors.count, "error") %> prohibio que se guardara el evento:</h2>
 
       <ul>
         <% guest.errors.each do |error| %>
@@ -28,7 +28,7 @@
 
   <div class="form-input-guest form-input-guest-edit input-edit-guest">
     <%= form.label :Parentezco, style: "display: block" %>
-    <%= form.select :kinship, ['Amigo', 'Papá', 'Mamá', 'Abuela', 'Abuelo', 'Amiga', 'Tio', 'Tia', 'Conocid@', 'Hermano', 'Hermana'], prompt: 'Selecciona el parentesco' %>
+    <%= form.select :kinship, ['Amigo', 'Papá', 'Mamá', 'Abuela', 'Abuelo', 'Amiga', 'Tio', 'Tia', 'Conocid@', 'Hermano', 'Hermana'], prompt: 'Selecciona el parentezco' %>
   </div>
 
   <div class="form-input-guest form-input-guest-edit input-edit-guest">
@@ -38,7 +38,7 @@
 
   <div class="form-input-guest input-edit-guest">
     <%= form.label :event_id %>
-    <%= form.collection_select :event_id, Event.all, :id, :name %>
+    <%= form.collection_select :event_id, current_user.events, :id, :name, { class: 'form-control' } %>
   </div>
 
   <div class="create-guest">
