--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -30,7 +30,7 @@
     </div>
     <div class="right">
       <div class="form-main form-field">
-        <%= form.label :Descripcion, style: "display: block" %>
+        <%= form.label :Descripción, style: "display: block" %>
         <%= form.text_area :description %>
       </div>
       <div class="container-time">
