--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,6 +19,7 @@
     </div>
   </div>
   <%= link_to "Crear Evento", new_event_path %>
+  <%= link_to "Nuevo invitado", new_guest_path, remote: true, id: "new-guest-link" %>
 </div>
 
 
